<resources>
    <string name="app_name">Bizfit</string>
    <string name="title_tab_coaches">Coaches</string>
    <string name="title_tab_messages">Messages</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_coaches">Coaches</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="action_confirm">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send">Send</string>
    <string name="logout">Log Out</string>
    <string name="support">Support</string>
    <string name="security">Security</string>
    <string name="ensimetri_special">Expert in</string>
    <string name="ensimetri_kaj">Sales and Franchising</string>
    <string name="ensimetri_taina">Financial Management</string>
    <string name="ensimetri_tapani">Acquisitions</string>
    <string name="ensimetri_nimi">What\'s your name?</string>
    <string name="security_publicity">This is a test version of the Bizfit app. Users of this app are people, who have been given rights to install the app. These people include coaches and their customers.</string>
    <string name="security_profile">Coach profiles can be seen by all of the users. Customers don\'t have their own profile. If customer starts conversation with coach, coach is able to see customer\'s name and profile picture, if customer has added one in their Google profile.</string>
    <string name="security_messages">All messages between customers and coaches will be deleted from our database after the testing period.</string>
    <string name="hint_search_hint">Search for something</string>
    <string name="hint_message_field">Start chatting with %s by sending a message</string>
    <string name="list_item_store_row_regular_more_button">more</string>
    <string name="Coach_page_content_introduction_title">Introduction:</string>
    <string name="sales_pitch">Sales pitch:</string>
    <string name="social_media">Social media:</string>
    <string name="field_of_expertise">Field of expertise:</string>
    <string name="place_of_residence">Place of Residence:</string>
    <string name="btnOrder_chat">Order chat</string>
    <string name="prices">Prices:</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="order_call">Order call</string>
    <string name="btnAccept">I accept</string>
    <string name="title_activity_login">Log in</string>
    <string name="activity_login_title_google">Log in with Google</string>
    <string name="in_cooperation">In cooperation with</string>
    <string name="title_support">Do you want to give feedback or report an issue?</string>
    <string name="desc_support">Tell us your thoughts down below!</string>
    <string name="hint_support">Write here!</string>
    <string name="checked_support">I want to be contacted regarding my message</string>
    <string name="desc_checked_support">We will respond to your Google account email.</string>
    <string name="toast_support_sent">Feedback sent succesfully!</string>
    <string name="select_coach">Select a coach</string>
    <string name="services">Services</string>
    <string name="service_chat">Chat</string>
    <string name="service_call">Call</string>
    <string name="service_doc">Document</string>
    <string name="free">Free</string>
    <string name="currently_unavailable">Currently unavailable</string>
    <string name="service_chat_terms">Daily message checkups</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="crash_toast_text">Application crashed</string>
    <string name="crash_dialog_title">Bizfit has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred and the
    application has crashed. Please help us fix this issue by sending us error data.
    All you have to do is click Send.</string>
    <string name="crash_dialog_comment_prompt">Could you tell us what you were trying to do before crash in the text field below?</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="title_activity_message" translatable="false">MessageActivity</string>
    <string name="server_client_id" translatable="false">101704415790-hohblqnrqv5bvb90qr90li0or4vffk5e.apps.googleusercontent.com</string>
    <string name="server_client_id_release" translatable="false"> 101704415790-71gd4vja64fhs5rsf30of9p5k7ngbrq2.apps.googleusercontent.com </string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string-array name="random_job_title">
        <item>Business Advisor</item>
    </string-array>
    <string-array name="random_first_name">
        <item>JAMES</item>
        <item>JOHN</item>
        <item>ROBERT</item>
        <item>MICHAEL </item>
        <item>WILLIAM </item>
        <item>DAVID</item>
        <item>RICHARD</item>
        <item>CHARLES</item>
        <item>JOSEPH</item>
        <item>THOMAS</item>
        <item>CHRISTOPHER</item>
        <item>DANIEL</item>
        <item>PAUL</item>
        <item>MARK</item>
        <item>DONALD</item>
    </string-array>
    <string-array name="random_last_name">
        <item>SMITH</item>
        <item>WILLIAMS</item>
        <item>JONES</item>
        <item>BROWN</item>
        <item>JOHNSON</item>
        <item>DAVIS</item>
        <item>MILLER</item>
        <item>WILSON</item>
        <item>MOORE</item>
        <item>TAYLOR</item>
    </string-array>
    <string-array name="random_country_and_city">
        <item>Tampere, Finland</item>
        <item>Frankfurt, Germany</item>
        <item>Moscow, Russia</item>
        <item>Paris, France</item>
        <item>Oslo, Norway</item>
    </string-array>
    <string-array name="random_sales_pitch">
        <item>"I'll make you rich! or at least more rich than you're now"</item>
        <item>"I'll boost your sales up to a 100%!'"</item>
        <item>"If you ever need any help concerning marketing, I'm your guy, contact me!"</item>
        <item>"Don't you just hate to keep up with all the bills? I can help you with that"</item>
        <item>"Want your enterprise to go worldwide? Maybe we should discuss about exporting?"</item>
        <item>"You want easy, efficient and cost-effective marketing? Social is the today's word!</item>
    </string-array>
    <string-array name="random_price_chat">
        <item>9,99€</item>
        <item>19,99€</item>
        <item>2,50€</item>
        <item>4,99€</item>
    </string-array>
    <string-array name="random_price_call">
        <item>9,99€</item>
        <item>19,99€</item>
        <item>49,99€</item>
        <item>29,99€</item>
    </string-array>
    <string-array name="dummy_conversation">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</item>
        <item>Donec ut tortor pharetra, auctor purus ut, sollicitudin felis. Cras rutrum, neque et accumsan malesuada, arcu justo pretium mi, eu bibendum ex magna vel ante.</item>
        <item>Duis blandit bibendum ex nec cursus.</item>
        <item>Donec ornare, eros et rhoncus volutpat, orci leo lobortis nunc, ac dapibus nulla velit ac ante.</item>
        <item>Proin dignissim maximus eleifend.</item>
        <item>Sed ut varius elit.</item>
    </string-array>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_shorter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="profile_select_profile_title">Select profile type</string>
    <string name="profile_select_progile_basic_desc">With basic profile you can order expert services. \n\nYour profile is only visible to experts that you have ordered services from.</string>
    <string name="profile_select_profile_expert_desc">With expert profile you can both order and offer expert services. \n\nYour profile is public and visible to anyone.</string>
    <string name="profile_basic_profile">Basic profile</string>
    <string name="profile_expert_profile">Expert profile</string>
    <string name="profile_noprofile_title">You don\'t have a profile</string>
    <string name="profile_noprofile_desc">You need a profile to order expert services. Would you like to do one now?</string>
    <string name="profile_name_title">What\'s your name?</string>
    <string name="profile_name_firstname">First name</string>
    <string name="profile_name_lastname">Last name</string>
    <string name="profile_name_phone">Phone number</string>
    <string name="profile_name_phone_hint">We need your phone number for you to be able to order call services from experts.</string>
    <string name="profile_company_has_company_title">Do you own a company?</string>
    <string name="profile_company_title">Company information</string>
    <string name="profile_company_name">Company name</string>
    <string name="profile_company_field">Business field</string>
    <string name="profile_company_desc">Describe your company</string>
    <string name="profile_picture_title">Add a profile picture</string>
    <string name="profile_picture_select">Select from gallery</string>
    <string name="profile_picture_take">Take new photo</string>
    <string name="profile_isexpert_title">Do you want to create an expert profile?</string>
    <string name="profile_isexpert_desc">If you have an expert profile, you can offer your services in the app.</string>
    <string name="profile_finish_title">Profile created</string>
    <string name="profile_finish_desc">Your profile was created succesfully! You can now return to main page.</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ask_later">Ask Later</string>
    <string name="button_ask_never">Never ask again</string>
    <string name="button_continue">Continue</string>
    <string name="button_skip">Skip</string>
    <string name="button_return_main">Return to main page</string>
    <string name="button_create_expert">Create expert profile</string>
    <string name="loading">Loading…</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
</resources>