<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container">

        <TextView
            android:text="@string/dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVTos"
            android:layout_below="@+id/tVTosHL"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:text="@string/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVTosHL"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="@string/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAccept"
            android:layout_below="@+id/tVTos"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>